--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,7 @@
    },
    "outputs": [],
    "source": [
-    "city_keys = None\n",
+    "city_keys = gree\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
