automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -134,16 +134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['Area', 'City', 'Country', 'Population'])"
+       "['Area', 'City', 'Country', 'Population']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
    },
    "outputs": [],
    "source": [
-    "city_values = None\n",
+    "city_values = lis\n",
     "city_values # [68, 'Greenville', 'USA', 84554]"
    ]
   },
