--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "  'Area': 3194}]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
    },
    "outputs": [],
    "source": [
-    "salina = None \n",
+    "salina = citie \n",
     "salina\n",
     "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
    ]
