--- a/index.ipynb
+++ b/index.ipynb
@@ -345,7 +345,7 @@
    },
    "outputs": [],
    "source": [
-    "los_cabos_pop = cities.value[]\n",
+    "los_cabos_pop = cities.value[3]\n",
     "los_cabos_pop # 287651"
    ]
   },
