--- a/index.ipynb
+++ b/index.ipynb
@@ -457,7 +457,7 @@
     }
    ],
    "source": [
-    "pyeongchang_keys = list()\n",
+    "pyeongchang_keys = list(cities[11].keys()\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
